--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 <textarea cols="30" rows="10" placeholder="Hello world !"></textarea>
                             </label>
                         </div>
-                        <button class="px-4 py-2 bg-bleu-clair rounded text-white font-bold tracking-wide w-[250px] mx-auto">
+                        <button class="px-4 py-2 bg-bleu-clair rounded text-white font-bold tracking-wide w-[250px] mx-auto" alt="En cours de developpement ...">
                             Envoyer le message
                         </button>
                     </form>
