--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <projet
                         data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="0"
                         name="REST Countries API"
-                        :icons="['html', 'css', 'tailwind', 'js', 'vue', 'api']"
+                        :icons="['tailwind', 'vue', 'api']"
                         image="./30-jours-code/24-refactor-countries/design/desktop-preview.jpg"
                         link-view="https://billyronico412.github.io/30-jours-code/24-refactor-countries/dist/"
                         link-github="https://github.com/BillyRonico412/billyronico412.github.io/tree/master/30-jours-code/24-refactor-countries"
