--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <meta name="description" content="Etudiant en Master Science du Logiciel à l'universté Paul Sabatier">
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./sal/sal.css">
     <link rel="manifest" href="./manifest.json">
