Add demineur et react app

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="lg:flex lg:gap-x-8 lg:mt-12">
 
-                <img src="./images/pdp.jpeg" alt="pdp" class="block lg:my-6 my-8 w-[500px] lg:h-[350px] lg:w-[350px]"
+                <img src="./images/pdp.jpg" alt="pdp" class="block lg:my-6 my-8 w-[500px] lg:h-[350px] lg:w-[350px]"
                      data-sal="slide-right" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="400">
 
                 <div class="lg:px-4" data-sal="slide-left" data-sal-easing="ease-out" data-sal-duration="600">
@@ -184,8 +184,8 @@
                             </div>
                             <div class="flex flex-col gap-y-6 lg:gap-y-0 lg:items-center lg:flex-row lg:flex-wrap lg:justify-around px-4 lg:w-full mt-8 lg:mt-0">
                                 <barre-progression progress="90" text="HTML & CSS"></barre-progression>
-                                <barre-progression progress="95" text="JavaScript"></barre-progression>
-                                <barre-progression progress="90" text="TypeScript"></barre-progression>
+                                <barre-progression progress="85" text="React"></barre-progression>
+                                <barre-progression progress="65" text="Nuxt"></barre-progression>
                                 <barre-progression progress="65" text="SASS"></barre-progression>
                                 <barre-progression progress="75" text="VueJS"></barre-progression>
                                 <barre-progression progress="85" text="Tailwind"></barre-progression>
@@ -199,8 +199,8 @@
                             <div class="flex flex-col gap-y-6 lg:gap-y-0 lg:items-center lg:flex-row lg:flex-wrap lg:justify-around px-4 lg:w-full">
                                 <barre-progression progress="90" text="NodeJS"></barre-progression>
                                 <barre-progression progress="45" text="Django"></barre-progression>
-                                <barre-progression progress="60" text="Spring Boot"></barre-progression>
-                                <barre-progression progress="65" text="PHP"></barre-progression>
+                                <barre-progression progress="40" text="Spring Boot"></barre-progression>
+                                <barre-progression progress="40" text="PHP"></barre-progression>
                                 <barre-progression progress="90" text="API Rest"></barre-progression>
                                 <barre-progression progress="65" text="API GraphQL"></barre-progression>
                             </div>
@@ -214,7 +214,7 @@
                                 <barre-progression progress="75" text="Kotlin"></barre-progression>
                                 <barre-progression progress="70" text="Java"></barre-progression>
                                 <barre-progression progress="55" text="Flutter"></barre-progression>
-                                <barre-progression progress="65" text="PWA"></barre-progression>
+                                <barre-progression progress="65" text="React Native"></barre-progression>
                             </div>
                         </div>
 
@@ -280,11 +280,11 @@
 
                 <projet
                         data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="0"
-                        name="Jeu de la vie"
-                        :icons="['html', 'css', 'tailwind', 'ts']"
-                        image="./30-jours-code/23-jeu-de-la-vie/jeu-de-la-vie.jpg"
-                        link-view="https://billyronico412.github.io/30-jours-code/23-jeu-de-la-vie"
-                        link-github="https://github.com/BillyRonico412/billyronico412.github.io/tree/master/30-jours-code/23-jeu-de-la-vie"
+                        name="Démineur"
+                        :icons="['react', 'tailwind', 'ts']"
+                        image="./images/demineur.png"
+                        link-view=" https://billyronico412.github.io/smartteam-demineur-react/"
+                        link-github="https://github.com/BillyRonico412/smartteam-demineur-react"
                 >
                 </projet>
                 <projet
@@ -298,11 +298,11 @@
                 </projet>
                 <projet
                         data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="0"
-                        name="Flyo Dark Theme"
-                        :icons="['html', 'css', 'tailwind']"
-                        image="./30-jours-code/20-flyo-dark-theme/design/desktop-preview.jpg"
-                        link-view="https://billyronico412.github.io/30-jours-code/20-flyo-dark-theme"
-                        link-github="https://github.com/BillyRonico412/billyronico412.github.io/tree/master/30-jours-code/20-flyo-dark-theme"
+                        name="REST Countries API"
+                        :icons="['tailwind', 'react', 'api', 'ts']"
+                        image="./30-jours-code/24-refactor-countries/design/desktop-preview.jpg"
+                        link-view="https://billyronico412.github.io/rest-countries-react/"
+                        link-github="https://github.com/BillyRonico412/rest-countries-react"
                 >
                 </projet>
 
@@ -404,7 +404,7 @@
              class="fixed w-[300px] h-screen bg-noir-menu top-0 transition-all duration-500 text-white desktop:left-0"
              :class="[afficheMenu ? 'left-0' : 'left-[-300px]']">
         <div class="flex flex-col justify-center items-center gap-y-4 pt-6">
-            <img src="./images/bitmoji.jpeg" alt="bitmoji"
+            <img src="./images/pdp.jpg" alt="bitmoji"
                  class="w-28 h-28 rounded-full border border-[#fff2] border-4">
             <h2 class="font-3 text-2xl">
                 Billy Ronico
