--- a/index.html
+++ b/index.html
@@ -297,12 +297,21 @@
                 >
                 </projet>
                 <projet
-                        data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="0"
+                        data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="100"
                         name="REST Countries API"
                         :icons="['tailwind', 'react', 'api', 'ts']"
                         image="./30-jours-code/24-refactor-countries/design/desktop-preview.jpg"
                         link-view="https://billyronico412.github.io/rest-countries-react/"
                         link-github="https://github.com/BillyRonico412/rest-countries-react"
+                >
+                </projet>
+                <projet
+                        data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="0"
+                        name="TodoApp"
+                        :icons="['tailwind', 'react', 'ts']"
+                        image="./images/logo-todo.png"
+                        link-view="https://billyronico412.github.io/todo/"
+                        link-github="https://github.com/BillyRonico412/todo"
                 >
                 </projet>
 
