--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <projet
                         data-sal="fade" data-sal-easing="ease-out" data-sal-duration="600" data-sal-delay="0"
                         name="TodoApp"
-                        :icons="['tailwind', 'react', 'ts']"
+                        :icons="['tailwind', 'react', 'ts', 'pwa']"
                         image="./images/logo-todo.png"
                         link-view="https://billyronico412.github.io/todo/"
                         link-github="https://github.com/BillyRonico412/todo"
